# LocalMLManager

./: gasp_diff.profile  pyproject.toml
dummy_exp/: id_card.json
dummy_exp/.hydra/: config.yaml  hydra.yaml  overrides.yaml
dummy_exp/wandb/latest-run/files/: config.yaml  wandb-metadata.json
dummy_exp/wandb/offline-run-20251001_113114-bqkxl5ft/files/: wandb-summary.json
expman/: cli.py  config_utils.py  core.py  experiment_profile.py  navigation.py  utils.py
notebooks/: dev_notebook.ipynb
