[project]
name = "expman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "LVidal95", email = "laurent.vidal@ikmail.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "omegaconf>=2.3.0",
    "pyjson>=1.4.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
